package entity.animal;

public interface Predator extends FoodChainMember {

}
